Change and translate statusses

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -57,5 +57,8 @@
     "Clicked": "Geklikt",
     "Delivered": "Afgeleverd",
     "of": "van",
-    "emails": "e-mails"
+    "emails": "e-mails",
+    "Resent": "Opnieuw verzonden",
+    "Sent": "Verzonden",
+    "Unsent": "Niet verzonden"
 }
