--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -46,7 +46,7 @@
     "Hard Bounced At": "Hard bounce op",
     "Status": "Status",
     "All": "Alle",
-    "Delivery": "Aflevering",
+    "Delivery": "Afgeleverd",
     "Click": "Klik",
     "Open": "Open",
     "Bounce": "Bounce",
