Show text when no attachments are found

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -1,63 +1,64 @@
 {
-    "Events": "Gebeurtenissen",
-    "Event Details": "Gebeurtenisdetails",
-    "Type": "Type",
-    "Mail Subject": "E-mailonderwerp",
-    "Occurred At": "Opgetreden op",
-    "User Information": "Gebruikersinformatie",
-    "Unknown": "Onbekend",
-    "IP Address": "IP-adres",
-    "Hostname": "Hostnaam",
-    "Platform": "Platform",
-    "Operating System": "Besturingssysteem",
-    "Browser": "Browser",
-    "User Agent": "User Agent",
-    "Location": "Locatie",
-    "City": "Stad",
-    "Country Code": "Landcode",
     "Additional Information": "Aanvullende informatie",
-    "Link": "Link",
-    "Tag": "Tag",
-    "Payload": "Payload",
-    "View": "Bekijken",
-    "Mail ID": "E-mail ID",
-    "Subject": "Onderwerp",
-    "Mails": "E-mails",
-    "Mail": "E-mail",
-    "From": "Van",
-    "Recipient": "Ontvanger",
-    "CC": "CC",
-    "BCC": "BCC",
-    "Reply To": "Antwoorden aan",
-    "Content": "Inhoud",
-    "Preview": "Voorbeeld",
-    "HTML Content": "HTML-inhoud",
-    "Text Content": "Tekstinhoud",
-    "Statistics": "Statistieken",
-    "Opens": "Geopend",
-    "Clicks": "Kliks",
-    "Sent At": "Verzonden op",
-    "Resent At": "Opnieuw verzonden op",
-    "Delivered At": "Afgeleverd op",
-    "Last Opened At": "Laatst geopend op",
-    "Last Clicked At": "Laatst geklikt op",
-    "Complained At": "Geklaagd op",
-    "Soft Bounced At": "Soft bounce op",
-    "Hard Bounced At": "Hard bounce op",
-    "Status": "Status",
     "All": "Alle",
-    "Delivery": "Afgeleverd",
-    "Click": "Klik",
-    "Open": "Open",
+    "BCC": "BCC",
     "Bounce": "Bounce",
-    "Complaint": "Klacht",
     "Bounced": "Gebounced",
-    "Opened": "Geopend",
+    "Browser": "Browser",
+    "CC": "CC",
+    "City": "Stad",
+    "Click": "Klik",
     "Clicked": "Geklikt",
+    "Clicks": "Kliks",
+    "Complained At": "Geklaagd op",
+    "Complaint": "Klacht",
+    "Content": "Inhoud",
+    "Country Code": "Landcode",
     "Delivered": "Afgeleverd",
-    "of": "van",
-    "emails": "e-mails",
+    "Delivered At": "Afgeleverd op",
+    "Delivery": "Afgeleverd",
+    "Email has no attachments.": "E-mail heeft geen bijlagen.",
+    "Event Details": "Gebeurtenisdetails",
+    "Events": "Gebeurtenissen",
+    "From": "Van",
+    "HTML Content": "HTML-inhoud",
+    "Hard Bounced At": "Hard bounce op",
+    "Hostname": "Hostnaam",
+    "IP Address": "IP-adres",
+    "Last Clicked At": "Laatst geklikt op",
+    "Last Opened At": "Laatst geopend op",
+    "Link": "Link",
+    "Location": "Locatie",
+    "Mail": "E-mail",
+    "Mail ID": "E-mail ID",
+    "Mail Subject": "E-mailonderwerp",
+    "Mails": "E-mails",
+    "Occurred At": "Opgetreden op",
+    "Open": "Open",
+    "Opened": "Geopend",
+    "Opens": "Geopend",
+    "Operating System": "Besturingssysteem",
+    "Payload": "Payload",
+    "Platform": "Platform",
+    "Preview": "Voorbeeld",
+    "Recipient": "Ontvanger",
+    "Reply To": "Antwoorden aan",
     "Resent": "Opnieuw verzonden",
+    "Resent At": "Opnieuw verzonden op",
     "Sent": "Verzonden",
-    "Unsent": "Niet verzonden"
+    "Sent At": "Verzonden op",
+    "Soft Bounced At": "Soft bounce op",
+    "Statistics": "Statistieken",
+    "Status": "Status",
+    "Subject": "Onderwerp",
+    "Tag": "Tag",
+    "Text Content": "Tekstinhoud",
+    "Type": "Type",
+    "Unknown": "Onbekend",
+    "Unsent": "Niet verzonden",
+    "User Agent": "User Agent",
+    "User Information": "Gebruikersinformatie",
+    "View": "Bekijken",
+    "emails": "e-mails",
+    "of": "van"
 }
