--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -1,60 +1,61 @@
 {
-    "Events": "Events",
-    "Event Details": "Event Details",
-    "Type": "Type",
-    "Mail Subject": "Mail Subject",
-    "Occurred At": "Occurred At",
-    "User Information": "User Information",
-    "Unknown": "Unknown",
-    "IP Address": "IP Address",
-    "Hostname": "Hostname",
-    "Platform": "Platform",
-    "Operating System": "Operating System",
-    "Browser": "Browser",
-    "User Agent": "User Agent",
-    "Location": "Location",
-    "City": "City",
-    "Country Code": "Country Code",
     "Additional Information": "Additional Information",
-    "Link": "Link",
-    "Tag": "Tag",
-    "Payload": "Payload",
-    "View": "View",
-    "Mail ID": "Mail ID",
-    "Subject": "Subject",
-    "Mails": "Mails",
-    "Mail": "Mail",
-    "From": "From",
-    "Recipient": "Recipient",
-    "CC": "CC",
-    "BCC": "BCC",
-    "Reply To": "Reply To",
-    "Content": "Content",
-    "Preview": "Preview",
-    "HTML Content": "HTML Content",
-    "Text Content": "Text Content",
-    "Statistics": "Statistics",
-    "Opens": "Opens",
-    "Clicks": "Clicks",
-    "Sent At": "Sent At",
-    "Resent At": "Resent At",
-    "Delivered At": "Delivered At",
-    "Last Opened At": "Last Opened At",
-    "Last Clicked At": "Last Clicked At",
-    "Complained At": "Complained At",
-    "Soft Bounced At": "Soft Bounced At",
-    "Hard Bounced At": "Hard Bounced At",
-    "Status": "Status",
     "All": "All",
-    "Delivery": "Delivery",
-    "Click": "Click",
-    "Open": "Open",
+    "BCC": "BCC",
     "Bounce": "Bounce",
-    "Complaint": "Complaint",
     "Bounced": "Bounced",
-    "Opened": "Opened",
+    "Browser": "Browser",
+    "CC": "CC",
+    "City": "City",
+    "Click": "Click",
     "Clicked": "Clicked",
+    "Clicks": "Clicks",
+    "Complained At": "Complained At",
+    "Complaint": "Complaint",
+    "Content": "Content",
+    "Country Code": "Country Code",
     "Delivered": "Delivered",
-    "of": "of",
-    "emails": "emails"
+    "Delivered At": "Delivered At",
+    "Delivery": "Delivery",
+    "Email has no attachments.": "Email has no attachments.",
+    "Event Details": "Event Details",
+    "Events": "Events",
+    "From": "From",
+    "HTML Content": "HTML Content",
+    "Hard Bounced At": "Hard Bounced At",
+    "Hostname": "Hostname",
+    "IP Address": "IP Address",
+    "Last Clicked At": "Last Clicked At",
+    "Last Opened At": "Last Opened At",
+    "Link": "Link",
+    "Location": "Location",
+    "Mail": "Mail",
+    "Mail ID": "Mail ID",
+    "Mail Subject": "Mail Subject",
+    "Mails": "Mails",
+    "Occurred At": "Occurred At",
+    "Open": "Open",
+    "Opened": "Opened",
+    "Opens": "Opens",
+    "Operating System": "Operating System",
+    "Payload": "Payload",
+    "Platform": "Platform",
+    "Preview": "Preview",
+    "Recipient": "Recipient",
+    "Reply To": "Reply To",
+    "Resent At": "Resent At",
+    "Sent At": "Sent At",
+    "Soft Bounced At": "Soft Bounced At",
+    "Statistics": "Statistics",
+    "Status": "Status",
+    "Subject": "Subject",
+    "Tag": "Tag",
+    "Text Content": "Text Content",
+    "Type": "Type",
+    "Unknown": "Unknown",
+    "User Agent": "User Agent",
+    "User Information": "User Information",
+    "View": "View",
+    "emails": "emails",
+    "of": "of"
 }
