Add mails per status chart

--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -20,6 +20,7 @@
     "Email has no attachments.": "Email has no attachments.",
     "Event Details": "Event Details",
     "Events": "Events",
+    "Fri": "Fri",
     "From": "From",
     "HTML Content": "HTML Content",
     "Hard Bounced At": "Hard Bounced At",
@@ -27,12 +28,15 @@
     "IP Address": "IP Address",
     "Last Clicked At": "Last Clicked At",
     "Last Opened At": "Last Opened At",
+    "Last week": "Last week",
     "Link": "Link",
     "Location": "Location",
     "Mail": "Mail",
     "Mail ID": "Mail ID",
     "Mail Subject": "Mail Subject",
     "Mails": "Mails",
+    "Mails per status": "Mails per status",
+    "Mon": "Mon",
     "Occurred At": "Occurred At",
     "Open": "Open",
     "Opened": "Opened",
@@ -44,18 +48,24 @@
     "Recipient": "Recipient",
     "Reply To": "Reply To",
     "Resent At": "Resent At",
+    "Sat": "Sat",
     "Sent At": "Sent At",
     "Soft Bounced At": "Soft Bounced At",
     "Statistics": "Statistics",
     "Status": "Status",
     "Subject": "Subject",
+    "Sun": "Sun",
     "Tag": "Tag",
     "Text Content": "Text Content",
+    "This week": "This week",
+    "Thu": "Thu",
+    "Tue": "Tue",
     "Type": "Type",
     "Unknown": "Unknown",
     "User Agent": "User Agent",
     "User Information": "User Information",
     "View": "View",
+    "Wed": "Wed",
     "emails": "emails",
     "of": "of"
 }
