--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -20,6 +20,7 @@
     "Email has no attachments.": "E-mail heeft geen bijlagen.",
     "Event Details": "Gebeurtenisdetails",
     "Events": "Gebeurtenissen",
+    "Fri": "Vri",
     "From": "Van",
     "HTML Content": "HTML-inhoud",
     "Hard Bounced At": "Hard bounce op",
@@ -27,12 +28,15 @@
     "IP Address": "IP-adres",
     "Last Clicked At": "Laatst geklikt op",
     "Last Opened At": "Laatst geopend op",
+    "Last week": "Vorige week",
     "Link": "Link",
     "Location": "Locatie",
     "Mail": "E-mail",
     "Mail ID": "E-mail ID",
     "Mail Subject": "E-mailonderwerp",
     "Mails": "E-mails",
+    "Mails per status": "E-mails per status",
+    "Mon": "Maa",
     "Occurred At": "Opgetreden op",
     "Open": "Open",
     "Opened": "Geopend",
@@ -45,20 +49,26 @@
     "Reply To": "Antwoorden aan",
     "Resent": "Opnieuw verzonden",
     "Resent At": "Opnieuw verzonden op",
+    "Sat": "Zat",
     "Sent": "Verzonden",
     "Sent At": "Verzonden op",
     "Soft Bounced At": "Soft bounce op",
     "Statistics": "Statistieken",
     "Status": "Status",
     "Subject": "Onderwerp",
+    "Sun": "Zon",
     "Tag": "Tag",
     "Text Content": "Tekstinhoud",
+    "This week": "Deze week",
+    "Thu": "Don",
+    "Tue": "Din",
     "Type": "Type",
     "Unknown": "Onbekend",
     "Unsent": "Niet verzonden",
     "User Agent": "User Agent",
     "User Information": "Gebruikersinformatie",
     "View": "Bekijken",
+    "Wed": "Woe",
     "emails": "e-mails",
     "of": "van"
 }
