--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -46,6 +46,7 @@
     "Platform": "Platform",
     "Preview": "Preview",
     "Recipient": "Recipient",
+    "Recipient(s)": "Recipient(s)",
     "Reply To": "Reply To",
     "Resent At": "Resent At",
     "Sat": "Sat",
