--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -46,6 +46,7 @@
     "Platform": "Platform",
     "Preview": "Voorbeeld",
     "Recipient": "Ontvanger",
+    "Recipient(s)": "Ontvanger(s)",
     "Reply To": "Antwoorden aan",
     "Resent": "Opnieuw verzonden",
     "Resent At": "Opnieuw verzonden op",
